--- a/test/basic.expect.css
+++ b/test/basic.expect.css
@@ -1,20 +1,20 @@
 .test-rgb {
 	color: rgb(178, 34, 34);
-	color: rgba(178, 34, 34, 1);
+	color: rgb(178, 34, 34);
 	color: rgba(178, 34, 34, .5);
-	color: rgba(178, 34, 34, 1);
+	color: rgb(178, 34, 34);
 	color: rgba(178, 34, 34, 0.5);
 }
 
 .test-rgba {
 	color: rgb(178, 34, 34);
-	color: rgba(178, 34, 34, 1);
+	color: rgb(178, 34, 34);
 	color: rgba(178, 34, 34, .5);
 }
 
 .test-rgb-percentages {
 	color: rgb(178, 34, 34);
-	color: rgba(178, 34, 34, 1);
+	color: rgb(178, 34, 34);
 	color: rgba(178, 34, 34, 0.5);
 }
 
@@ -22,18 +22,18 @@
 	color: hsl(0, 0%, 100%);
 	color: hsl(120deg, 100%, 50%);
 	color: hsl(120, 100%, 50%);
-	color: hsla(120, 100%, 50%, 1);
+	color: hsl(120, 100%, 50%);
 	color: hsla(120, 100%, 50%, .5);
-	color: hsla(120, 100%, 50%, 1);
+	color: hsl(120, 100%, 50%);
 	color: hsla(120, 100%, 50%, 0.5);
 	color: hsl(120deg, 100%, 50%);
 }
 
 .test-hsla {
 	color: hsl(120, 100%, 50%);
-	color: hsla(120, 100%, 50%, 1);
+	color: hsl(120, 100%, 50%);
 	color: hsla(120, 100%, 50%, .5);
-	color: hsla(120, 100%, 50%, 1);
+	color: hsl(120, 100%, 50%);
 	color: hsla(120, 100%, 50%, 0.5);
 }
 
