Safe postcss values parser

--- a/test/basic.css
+++ b/test/basic.css
@@ -45,3 +45,7 @@
 	color: hwb(0 0% 0% / 100%);
 	color: hwb(0 0% 0% / 50%);
 }
+
+.test-unparseable-color-function {
+	color: rgb(data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==);
+}
