Apply suggestions from code review

--- a/test/basic.preserve-true.expect.css
+++ b/test/basic.preserve-true.expect.css
@@ -71,5 +71,5 @@
 }
 
 .test-unparseable-color-function {
-	color: rgb(data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==);
+	color: rgb(; );
 }
