--- a/test/basic.css
+++ b/test/basic.css
@@ -47,5 +47,5 @@
 }
 
 .test-unparseable-color-function {
-	color: rgb(data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==);
+	color: rgb(; );
 }
