Transform notations with var() alpha values

--- a/test/basic.css
+++ b/test/basic.css
@@ -12,6 +12,11 @@
 	color: rgba(178 34 34 / .5);
 }
 
+.test-rgb-functions {
+	color: rgb(178 34 34 / var(--text-opacity));
+	color: rgb(178 34 34 / calc(1 / 2));
+}
+
 .test-rgb-percentages {
 	color: rgba(70% 13.5% 13.5%);
 	color: rgba(70% 13.5% 13.5% / 100%);
