--- a/test/basic.expect.css
+++ b/test/basic.expect.css
@@ -12,6 +12,11 @@
 	color: rgba(178, 34, 34, .5);
 }
 
+.test-rgb-functions {
+	color: rgba(178, 34, 34, var(--text-opacity));
+	color: rgba(178, 34, 34, calc(1 / 2));
+}
+
 .test-rgb-percentages {
 	color: rgb(178, 34, 34);
 	color: rgb(178, 34, 34);
